# citation-graph

./: .env.example  .gitignore  README.md  citation-graph-deep-research-plan.md  pyproject.toml
citation_deep_research/: __init__.py  cli.py  clients.py  env.py  importer.py  institution.py  models.py  ollama.py  pipeline.py  ranker.py  rate_limit.py  resolver.py  text.py  visualization.py
runs/large-example-output/: graph.html  graph.json  manifest.json
runs/readme-example/: graph.html  graph.json  manifest.json
tests/: test_cli.py  test_clients.py  test_env.py  test_importer.py  test_institution.py  test_models.py  test_ollama.py  test_pipeline.py  test_ranker.py  test_rate_limit.py  test_resolver.py  test_unpaywall.py  test_visualization.py
